feat: unlockable enchantments